--- a/src/templates/admin/login.html
+++ b/src/templates/admin/login.html
@@ -1,12 +1,10 @@
-<!-- added customize JS and CSS -->
+<!-- added customize JS -->
 
 {% extends "admin/base_site.html" %}
 {% load i18n admin_static suit_tags %}
 {% load url from suit_compat %}
 
-{% block extrastyle %}{{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% static "admin/css/dl_login.css" %}"/>
-{% endblock %}
+{% block extrastyle %}{{ block.super }}{% endblock %}
 
 {% block bodyclass %}login{% endblock %}
 
