fix admin styles

--- a/src/apps_common/gallery/static/gallery/admin/css/gallery.css
+++ b/src/apps_common/gallery/static/gallery/admin/css/gallery.css
@@ -1,7 +1,7 @@
 /* Заголовок */
 .gallery .caption {
-    font-size: 14px;
-    font-weight: bold;
+    color: gray;
+    font-size: 12px;
 }
 
 /* Блок с кнопками */
