--- a/src/apps_common/ckeditor/static/ckeditor/css/ckeditor.css
+++ b/src/apps_common/ckeditor/static/ckeditor/css/ckeditor.css
@@ -1,5 +1,7 @@
 html {
-    min-height: 100%
+    min-height: 100%;
+    font-size: 14px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 body > *:first-child {
