--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'suit/css/suit.css' %}" media="all">
 
   {% stylesheet 'admin_customize' %}
-  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
   {% block extrastyle %}{% endblock %}
 
