--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -104,4 +104,8 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
 
 .btn {
   @include font-size(14px);
+
+  &.btn-mini {
+    @include font-size(12px);
+  }
 }
