--- a/src/templates/admin/change_form.html
+++ b/src/templates/admin/change_form.html
@@ -95,7 +95,7 @@
         </div>
 
         {% block object-tools %}
-          {% if change %}{% if not is_popup %}
+          {% if has_absolute_url %}{% if not is_popup %}
 {#            <h4 class="italic-title">{% trans 'tools'|capfirst %}</h4>#}
             <ul class="box menu-box">
               {% block object-tools-items %}
