--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -98,6 +98,10 @@ input[type="radio"], input[type="checkbox"] {
   margin: 2px 0 0;
 }
 
+select, input[type="file"] {
+  height: auto;
+}
+
 /*
   Font-size
 */
