--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -32,10 +32,10 @@
 //    }
 //
 //
-//  Также можно использовать переменные со списками:
-//    $interval: (0, $media640);
+//  Также можно использовать переменные-списки:
+//    $desktop: ($media768, $media1024);
 //    ...
-//    @include media_interval($interval) { ... }
+//    @include media_interval($desktop) { ... }
 //
 //===================================================
 @mixin media_interval($args...) {
@@ -96,9 +96,14 @@
 }
 
 //=========================================
-//  Вертикальное и горизонтальное
-//  центрирование картинки + растягивание
-//  её на весь родительский блок (минимум).
+//  Вертикальное и горизонтальное центрирование
+//  картинки + растягивание её на весь родительский блок,
+//  если её стандартного размера недостаточно.
+//
+//  Параметр $minSize может помочь с ошибками округления.
+//  Для этого нужно указать значение, чуть болше 100%.
+//  Например:
+//    @include centrizeImage($minSize: 100.5%);
 //=========================================
 @mixin centrizeImage($zIndex: 1, $minSize: 100%) {
   position: absolute;
