--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -65,6 +65,54 @@
     </div>
   </div>
 
+
+  <div class="block">
+    <div class="grid-block">
+      <form>
+        <fieldset>
+          <input type="checkbox" name="chk" value="1" id="chk1" checked>
+          <label for="chk1" ondblclick="return false">One</label>
+        </fieldset>
+
+        <fieldset>
+          <input type="checkbox" name="chk" value="2" id="chk2">
+          <label for="chk2">Two</label>
+        </fieldset>
+
+        <fieldset>
+          <input type="checkbox" name="chk" value="2" id="chk3" disabled>
+          <label for="chk3">Two</label>
+        </fieldset>
+
+        <fieldset>
+          <input type="checkbox" name="chk" value="2" id="chk3" disabled checked>
+          <label for="chk3">Two</label>
+        </fieldset>
+
+
+        <fieldset>
+          <input type="radio" name="rad" value="1" id="rad1" checked>
+          <label for="rad1" ondblclick="return false">One</label>
+        </fieldset>
+
+        <fieldset>
+          <input type="radio" name="rad" value="2" id="rad2">
+          <label for="rad2">Two</label>
+        </fieldset>
+
+        <fieldset>
+          <input type="radio" name="rad" value="2" id="rad3" disabled>
+          <label for="rad3">Two</label>
+        </fieldset>
+
+        <fieldset>
+          <input type="radio" name="rad2" value="2" id="rad3" disabled checked>
+          <label for="rad3">Two</label>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
   {% render_attached_blocks config %}
 
 {% endblock content %}
