--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -4,8 +4,10 @@ form {
   @include border-box;
 }
 
+// стандартные стили текстовых полей
 input[type="text"], input[type="password"], input[type="email"],
-input[type="number"], textarea, select {
+input[type="number"], input[type="tel"], input[type="url"], input[type="search"],
+textarea, select {
   width: 200px;
   max-width: 100%;
   padding: 5px 6px;
@@ -15,6 +17,7 @@ input[type="number"], textarea, select {
   @include border_radius(4px);
 }
 
+// стандартные стили fieldset в форме
 fieldset {
   margin-bottom: 10px;
   &:nth-last-of-type(1) {
@@ -39,5 +42,167 @@ fieldset {
   .error {
     margin-left: 10px;
     color: #FF0000;
+  }
+}
+
+
+
+/*
+    Кастомизация чекбоксов.
+    ОБЯЗАТЕЛЬНО наличие label после input.
+*/
+$checkbox_width: 30px;
+$checkbox_height: 17px;
+$checkbox_dot_gap: 1px;
+$checkbox_dot_size: $checkbox_height - 2 * $checkbox_dot_gap;
+
+input[type=checkbox] {
+  &:not(checked) {
+    // прячем оригинал
+    position: absolute;
+    @include opacity(0);
+
+    & + label {
+      position: relative;
+      padding-left: $checkbox_width + 10px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 1px;
+        left: 0;
+        width: $checkbox_width;
+        height: $checkbox_height;
+        background: #CDD1DA;
+        @include border_radius(#{$checkbox_height / 2});
+        @include box-shadow(inset 0 2px 3px rgba(0, 0, 0, 0.2));
+      }
+
+      // переключатель
+      &:after {
+        content: '';
+        position: absolute;
+        top: 1px + $checkbox_dot_gap;
+        left: 1px + $checkbox_dot_gap;
+        width: $checkbox_dot_size;
+        height: $checkbox_dot_size;
+        background: #FFFFFF;
+        @include border_radius(50%);
+        @include transition(left 0.2s);
+        @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+      }
+    }
+  }
+
+  &:checked {
+    & + label {
+      &:before {
+        background: #9FD468;
+      }
+
+      &:after {
+        left: $checkbox_width - $checkbox_height;
+      }
+    }
+  }
+
+  &:disabled {
+    &:not(checked) {
+      & + label {
+        &:before {
+          background: #EAECF0;
+        }
+
+        &:after {
+          background: #E0E0E0;
+        }
+      }
+    }
+
+    &:checked {
+      & + label {
+        &:before {
+          background: #B8DF90;
+        }
+
+        &:after {
+          background: #E0E0E0;
+        }
+      }
+    }
+  }
+}
+
+/*
+    Кастомизация радиоксов.
+    ОБЯЗАТЕЛЬНО наличие label после input.
+*/
+$radiobox_size: 17px;
+$radiobox_dot_gap: 3px;
+$radiobox_dot_size: $radiobox_size - 2 * $radiobox_dot_gap;
+
+input[type=radio] {
+  &:not(checked) {
+    // прячем оригинал
+    position: absolute;
+    @include opacity(0);
+
+    & + label {
+      position: relative;
+      padding-left: $radiobox_size + 10px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: $radiobox_size;
+        height: $radiobox_size;
+        background: #FFFFFF;
+        border: 1px solid #CDD1DA;
+        @include border_radius(50%);
+      }
+
+      // переключатель
+      &:after {
+        content: '';
+        position: absolute;
+        top: 1px + $radiobox_dot_gap;
+        left: 1px + $radiobox_dot_gap;
+        width: $radiobox_dot_size;
+        height: $radiobox_dot_size;
+        background: #9FD468;
+        @include opacity(0);
+        @include border_radius(50%);
+        @include transition(opacity 0.2s);
+        @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.5));
+      }
+    }
+  }
+
+  &:checked {
+    & + label {
+      &:after {
+        @include opacity(1);
+      }
+    }
+  }
+
+  &:disabled {
+    &:not(checked) {
+      & + label {
+        &:before {
+          background: #EAECF0;
+        }
+      }
+    }
+
+    &:checked {
+      & + label {
+        &:after {
+          background: #B8DF90;
+        }
+      }
+    }
   }
 }
