--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -151,6 +151,11 @@ select, input[type="file"] {
   height: auto;
 }
 
+// правка Google-карты
+.gm-styles {
+  line-height: normal;
+}
+
 /*
   Font-size
 */
