--- a/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
@@ -120,7 +120,7 @@
 
 /* Чекбокс удаления файла */
 .stdimage .delete {
-    vertical-align: text-bottom;
+    vertical-align: middle;
     margin: 0 0 0 5px;
 }
 
