--- a/src/templates/admin/index.html
+++ b/src/templates/admin/index.html
@@ -4,7 +4,7 @@
 
 
 {% block breadcrumbs %}
-  <div class="breadcrumbs">
+  <div class="breadcrumb">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
   </div>
 {% endblock %}
