--- a/src/apps_common/backups/templates/backups/admin/index.html
+++ b/src/apps_common/backups/templates/backups/admin/index.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-  <h2>{% trans 'Backups' %}</h2>
+  <h2 style="margin-bottom: 3px">{% trans 'Backups' %}</h2>
 
   <table class="admin-table">
     <thead>
