--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -3,11 +3,25 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   @include font-size(14px);
-}
 
-input, button, select, textarea {
-  font-family: 'Source Sans Pro', sans-serif;
-  @include font-size(14px);
+  button, select, textarea, input[type="text"], input[type="password"],
+  input[type="datetime"], input[type="datetime-local"],
+  input[type="date"], input[type="month"], input[type="time"],
+  input[type="week"], input[type="number"], input[type="email"],
+  input[type="url"], input[type="search"], input[type="tel"],
+  input[type="color"], .uneditable-input {
+    font-family: 'Source Sans Pro', sans-serif;
+    @include font-size(14px);
+  }
+
+  select, textarea, input[type="text"], input[type="password"],
+  input[type="datetime"], input[type="datetime-local"],
+  input[type="date"], input[type="month"], input[type="time"],
+  input[type="week"], input[type="number"], input[type="email"],
+  input[type="url"], input[type="search"], input[type="tel"],
+  input[type="color"], .uneditable-input {
+    height: 22px;
+  }
 }
 
 input[type="file"] {
@@ -28,7 +42,8 @@ input[type=number] {
 }
 
 // не ограниченная высота textarea
-.autosize {
+textarea.autosize {
+  height: auto;
   max-height: none;
 }
 
