--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -14,13 +14,13 @@ body {
     @include font-size(14px);
   }
 
-  select, input[type="text"], input[type="password"],
+  select, textarea, input[type="text"], input[type="password"],
   input[type="datetime"], input[type="datetime-local"],
   input[type="date"], input[type="month"], input[type="time"],
   input[type="week"], input[type="number"], input[type="email"],
   input[type="url"], input[type="search"], input[type="tel"],
   input[type="color"], .uneditable-input {
-    height: 22px;
+    padding: 6px;
   }
 }
 
